--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Saira+Semi+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @import 'home.css';
-@import 'responsive_home.css';
+@import 'forms.css';
 
 * {
   scroll-behavior: smooth;
