--- a/forms.css
+++ b/forms.css
@@ -1,3 +1,13 @@
+* {
+  scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  border: none;
+  overflow-x: hidden;
+  outline: none;
+  font-family: "Saira Semi Condensed", sans-serif;
+}
+
 body {
   display: flex;
   justify-content: center;
